[package]
name = "solana-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.18.15"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.4.0"
serde_json = "1.0.115"
solana-address-lookup-table-program = "1.18.9"
solana-client = "1.18.9"
solana-sdk = "1.18.9"
solana-transaction-status = "1.18.9"
blob = { git = "https://github.com/cenwadike/blob.git" }
anchor-client = "0.30.0"

[dev-dependencies]
dotenv = "0.15.0"
borsh = "1.4.0"
