[package]
name = "solana-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.4.0"
solana-client = "1.18.9"
solana-sdk = "1.18.9"
blob = { git = "https://github.com/cenwadike/blob.git" }
anchor-client = "0.30.0"

